modifying style search input

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -8,6 +8,7 @@
 @import './component/reset.scss';
 @import './component/grid.scss';
 @import './component/header.scss';
+@import './component/search.scss';
 @import './component/button.scss';
 @import './component/sidebar.scss';
 @import './component/login.scss';
