--- a/src/styles/component/_form-input.scss
+++ b/src/styles/component/_form-input.scss
@@ -9,7 +9,7 @@
   color: #495057;
   background-color: #fff;
   background-clip: padding-box;
-  border: 1px solid #ced4da;
+  border: 1px solid #e8e8e8;
   border-radius: .25rem;
   transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
