fix style heading latest additions

--- a/src/styles/component/ep-latest-additions.scss
+++ b/src/styles/component/ep-latest-additions.scss
@@ -2,11 +2,13 @@
   padding: 20px;
   margin-bottom: 10px;
   h2 {
+    font-weight: 600;
     margin: 0;
   }
   .ep_search_feed {
     display: inline-flex;
     margin-bottom: 10px;
+    font-size: 12px;
     .ep_search_feed__icons {
       position: relative;
       left: 6px;
