development style and login area

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -18,4 +18,5 @@
 @import './component/list-group.scss';
 @import './component/footer.scss';
 
+@import './utils/colors.scss';
 @import './utils/helper.scss';
