--- a/src/styles/component/_button.scss
+++ b/src/styles/component/_button.scss
@@ -46,6 +46,7 @@
   font-size: 16px;
   text-decoration: none;
   outline: 0;
+  cursor: pointer;
   &:visited {
     color: #ffd;
   }
@@ -61,6 +62,12 @@
 }
 
 .btn-login {
+  color: #fff;
+  background-color: #ffc107;
+  border-color: #ffc107;
+}
+
+.btn-recent-additions {
   color: #fff;
   background-color: #ffc107;
   border-color: #ffc107;
