--- a/src/styles/component/_header.scss
+++ b/src/styles/component/_header.scss
@@ -36,7 +36,7 @@
 .header-slider-banner {
   .banners-app {
     display: flex;
-    width: 970px;
+    width: 100%;
     height: 185px;
     left: 226px;
     top: 88px;
