--- a/src/styles/component/_main.scss
+++ b/src/styles/component/_main.scss
@@ -44,18 +44,16 @@ ul.icons {
   cursor: default;
   list-style: none;
   padding-left: 0;
-
+  float: right;
+  margin: 7px 2px;
   li {
     display: inline-block;
     padding: 0 2px 0 0;
-
     &:last-child {
       padding-right: 0;
     }
-
     .icon {
       color: inherit;
-
       &:before {
         font-size: 1.25em;
       }
