--- a/src/styles/component/_header.scss
+++ b/src/styles/component/_header.scss
@@ -1,11 +1,11 @@
 .header-slider-banner {
   .banners-app {
     display: flex;
-    width: 100%;
-    height: 185px;
-    left: 226px;
-    top: 88px;
-    background-color: #005689;
     margin-top: 8px;
+    img.slotbanner {
+      background-size: cover;
+      width: 100%;
+      height: auto;
+    }
   }
 }
