add cookies verification and slugs validation content login

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -15,6 +15,7 @@
 @import './component/login.scss';
 @import './component/main.scss';
 @import './component/footer.scss';
+@import './component/burgermenu.scss';
 @import './component/form-input.scss';
 @import './component/list-group.scss';
 
