--- a/src/styles/component/eprints-style/_ep_datepicker.scss
+++ b/src/styles/component/eprints-style/_ep_datepicker.scss
@@ -34,7 +34,7 @@ a.date-picker-control {
     border: 0 none;
     padding: 0;
     margin: 0 0 0 4px;
-    background: transparent url(../assets/icon/datepicker/cal.svg) no-repeat 50% 50%;
+    background: transparent url(../assets/icon/datepicker/) no-repeat 50% 50%;
     // background: transparent url(/images/icon/datepicker/cal.svg) no-repeat 50% 50%;
     min-width: 16px;
     line-height: 1;
